injecting dependancy wizardRepository