@@ -1,26 +1,34 @@
 package com.wildcodeschool.wildandwizard.repository;
 
 import com.wildcodeschool.wildandwizard.entity.Wizard;
+import org.springframework.stereotype.Repository;
 
 import java.sql.Date;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+@Repository
 public class WizardRepository implements WizardDao {
 
-    private static List<Wizard> wizards = new ArrayList<>(
-            Arrays.asList(
-                    new Wizard(1L, "Harry", "Potter", new Date(80, 6, 31), "London", "", false)
+    private static final List<Wizard> wizards = new ArrayList<>(
+            List.of(
+                    new Wizard(
+                            1L,
+                            "Harry",
+                            "Potter",
+                            new Date(80, 6, 31),
+                            "London",
+                            "",
+                            false)
             )
     );
 
     @Override
-    public Wizard save(Wizard wizard) {
+    public void save(Wizard wizard) {
 
         wizard.setId((long) (wizards.size() + 1));
         wizards.add(wizard);
-        return wizard;
     }
 
     @Override
@@ -41,7 +49,7 @@ public class WizardRepository implements WizardDao {
     }
 
     @Override
-    public Wizard update(Wizard wizard) {
+    public void update(Wizard wizard) {
 
         for (Wizard update : wizards) {
             if (update.getId().equals(wizard.getId())) {
@@ -52,10 +60,9 @@ public class WizardRepository implements WizardDao {
                 update.setBiography(wizard.getBiography());
                 update.setMuggle(wizard.isMuggle());
 
-                return update;
+                return;
             }
         }
-        return null;
     }
 
     @Override
